--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.2"
+dotenv = "0.15.0"
+rocket = {version = "0.5.0-rc.2", features = ["secrets"]}
+diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
