--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-rocket = {version = "0.5.0-rc.2", features = ["secrets"]}
+rocket = {version = "0.5.0-rc.2", features = ["secrets", "tls"]}
 diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
+argon2 = "0.4"
+rand_core = {version = "0.6", features = ["std"]}
