--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 image: rust:latest
 
+before_script:
+  - apt-get update
+  - apt-get install sassc -y
+
 compile_server:
   stage: build
   script:
