--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rocket = {version = "0.5.0-rc.2", features = ["secrets", "tls"]}
 diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
 argon2 = "0.4"
 rand_core = {version = "0.6", features = ["std"]}
+rand = "0.8.5"
