--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "backend"
+name = "homepage"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,3 +12,4 @@ diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
 argon2 = "0.4"
 rand_core = {version = "0.6", features = ["std"]}
 rand = "0.8.5"
+askama = "0.11.1"
