--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,9 @@ compile:
   tags:
     - x86_64
 
-# test_server:
-#   stage: test
-#   script:
-#     - cargo test
-#   tags:
-#     - x86_64
+test_server:
+  stage: test
+  script:
+    - cargo test
+  tags:
+    - x86_64
