--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
 argon2 = "0.4"
 rand_core = {version = "0.6", features = ["std"]}
 rand = "0.8.5"
-askama = "0.11.1"
+# askama = {version = "0.12", features = ["with-rocket"]}
+# until askamas with-rocket feature is fixed, we use a workaround in this repository
+askama = "0.12"
