--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-rocket = {version = "0.5.0-rc.2", features = ["secrets", "tls"]}
+rocket = {version = "0.5.0-rc.3", features = ["secrets", "tls"]}
 diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
 argon2 = "0.4"
 rand_core = {version = "0.6", features = ["std"]}
 rand = "0.8.5"
-# askama = {version = "0.12", features = ["with-rocket"]}
-# until askamas with-rocket feature is fixed, we use a workaround in this repository
-askama = "0.12"
+
+[dependencies.rocket_dyn_templates]
+version = "=0.1.0-rc.3"
+features = ["tera"]
